1.1:
====

- Introducing the "muon-updater" program, an update-centric GUI
- The download view has been revamped, now supporting per-item progress, 
  as well as displaying the size for each item
- Add a new "Residual Config" filter to the filters pane.
  This filter shows packages that still have purgeable config files laying around.
- Add a new "Installed (auto-removable)" filter to the filters pane.
  This filter shows packages that were automatically installed that no longer
  have any installed dependants. (Basically, what apt-get autoremove would show)
- The Technical Details tab now displays the package's origin
- Added a progress bar to Muon's statusbar to show Xapian indexing update progress.
- Introducing an update notification KDED Module
- Improved startup time

1.0:
====

- Initial release. Features of note include:
  * A powerful, yet intuitive interface
  * Fast, accurate package search using the apt-xapian index and the Synaptic search algorithm
  * Support for filtering packages by status and category
  * Media change support
  * Support for configuring packages through the debconf system
  * Warn about/disallow the installation of untrusted packages, depending on APT settings
  * Uses Polkit for running privileged actions for enhanced security, convenience, and desktop integration
  * Power management suspension during package downloads, installations and removals
  * Support for download the latest changelog of a package
  * Package screenshots